--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "pg": "^8.3.0"
   }
 }
