--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "supertest": "^6.3.3",
-    "pg": "^8.3.0"
+    "jsonschema": "^1.2.6",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.3.0",
+    "supertest": "^6.3.3"
   }
 }
