--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.3",
+    "jsonwebtoken": "^9.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "2.0.5",
     "uuid": "^9.0.0"
   },
