--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^1.3.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "react": "^16.6.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "2.0.5",
