--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,6 +17,6 @@
     "jsonschema": "^1.2.6",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.0",
-    "supertest": "^6.3.3"
+    "supertest": "^5.0.0-0"
   }
 }
