--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -2,8 +2,9 @@
   "name": "my-app-name",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "react": "^16.6.0",
