--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,7 +11,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "4.0.3",
     "uuid": "^9.0.0"
   },
   "scripts": {
@@ -35,5 +35,10 @@
     "@testing-library/react": "^12.1.5",
     "fsevents": "^2.3.2",
     "jest-dom": "^4.0.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
